fix skills flex wrap

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -10,8 +10,9 @@
 
 .skills-container {
     display: flex;
+    flex-wrap: wrap;
 }
 .skills-container *::before {
-    content: '|'
+    content: '|';
 }
 
